<resources>
    <string name="app_name">SFClippy</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="action_accept">Accept</string>
    <string name="action_accept_results">Accept</string>
    <string name="action_lucky">Random Choice</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <string name="action_p1_preferences">P1 Preferences</string>
    <string name="action_p2_preferences">P2 Preferences</string>
    <string name="action_results">View Results</string>
    <string name="action_backup">Backup Data</string>
    <string name="action_regenerate_stats">Regenerate Statistics</string>
    <string name="action_show_stats1">Show P1 Stats</string>
    <string name="action_show_stats2">Show P2 Stats</string>


    <string name="action_p1_win">Player 1 Win</string>
    <string name="action_p2_win">Player 2 Win</string>
    <string name="action_listen">Listen</string>
    <string name="label_p1_choice">Player 1 Choice:</string>
    <string name="label_p2_choice">Player 2 Choice:</string>
    <string name="action_p1_choose">Choose</string>
    <string name="action_p2_choose">Choose</string>
    <string name="title_options">Options</string>

    <string name="label_user_rating">User rating:</string>
    <string name="action_select_character">Select Character</string>

    <string name="helloselect">Hello and select</string>
    <string name="hello_battle_list">Hello battle list</string>

    <string name="charresult_win">Win/Lose</string>
    <string name="charresult_date">Date</string>
    <string name="charresult_char">Character</string>
</resources>
