<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="240dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical"
    android:background="@color/background_floating_material_light"
    android:id="@+id/layoutDrawerMain">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_options"
        android:id="@+id/textView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_p1_preferences"
        android:id="@+id/btnPlayer1Prefs"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@android:style/Theme.Material.Light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_p2_preferences"
        android:id="@+id/btnPlayer2Prefs"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@android:style/Theme.Material.Light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_results"
        android:id="@+id/btnResults"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@android:style/Theme.Material.Light" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_backup"
        android:id="@+id/btnBackup"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:theme="@android:style/Theme.Material.Light" />

</LinearLayout>