<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <TextView
        android:text="@string/charresult_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblDate"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:text="@string/charresult_char"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblCharacter"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <TextView
        android:text="@string/charresult_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lblWin"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</RelativeLayout>