<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.will.sfclippy.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:id="@+id/layoutP1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_p1_choice"
            android:id="@+id/textP1" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_p1_choose"
            android:id="@+id/btnChoiceP1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="16dp"
            android:theme="@android:style/Theme.Material.Light" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutP1"
        android:orientation="horizontal"
        android:id="@+id/layoutP2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_p2_choice"
            android:id="@+id/textP2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_p2_choose"
            android:id="@+id/btnChoiceP2"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_marginStart="16dp"
            android:theme="@android:style/Theme.Material.Light" />

    </LinearLayout>

    <Space
        android:layout_width="20dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/notificationSpace" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_p1_win"
        android:layout_above="@id/notificationSpace"
        android:layout_alignParentStart="true"
        android:id="@+id/btnWinP1"
        style="@style/Base.Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_p2_win"
        android:layout_above="@id/notificationSpace"
        android:layout_alignParentEnd="true"
        android:id="@+id/btnWinP2"
        style="@style/Widget.AppCompat.Button.Colored" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lblFact2"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/lblFact2"
        android:layout_centerHorizontal="true"
        android:id="@+id/lblFact1"
        android:padding="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblFact2"
        android:layout_centerHorizontal="true"
        android:id="@+id/lblFact3"
        android:padding="8dp" />

</RelativeLayout>